# AssurancePlatform

./: .all-contributorsrc  .commitlintrc.json  .dockerignore  .env.example  .fallow-baseline.dead-code.json  .fallow-baseline.dupes.json  .fallow-baseline.health.json  .fallowrc.json  .gitignore  .pnpmrc.json  .pre-commit-config.yaml  .prettierrc.json  .releaserc.json  .remarkrc.json  .secrets.baseline  .travis.yml  404.html  AGENTS.md  AssurancePlatform.code-workspace  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  HOWTO_deploy_to_Azure.md  HOWTO_reset_the_database  HOWTO_reset_the_database.md  README.md  TEA_PLATFORM_REFACTORING_PLAN.md  biome.json  docker-compose.development.yml  docker-compose.local.yml  docker-compose.testing.yml  docker-compose.yml  index.html  mdx-components.tsx  middleware.test.ts  middleware.ts  (+21 more)
.beads/: .gitignore  .migration-hint-ts  config.yaml  issues.jsonl  last-touched  metadata.json
.githooks/: pre-push
.github/: dependabot.yml
_frontend/: .babelrc  Dockerfile  README.md  package-lock.json  package.json
about/: index.html
actions/: assurance-cases.ts  auth.ts  capture.ts  case-data.ts  case-studies.ts  cases.ts  connected-accounts.ts  demo-case.ts  export-case.ts  export-document.ts  integrations.ts  tours.ts  users.ts
app/: global-error.tsx  globals.css  layout.tsx  not-found.tsx
archive/: index.html
assets/: style.css
blog/: index.html
community/: index.html
components/: check-migration-notice.tsx  check-user-email.tsx  cookie-consent.tsx  feedback-banner.tsx  header.tsx
config/: index.ts
content/: _meta.ts  about.mdx  data-retention-policy.mdx  index.mdx
data/: edges.ts  node-types.ts  store.ts
demos/: test.html
e2e/: auth.setup.ts  auth.spec.ts  case-studies-index.spec.ts  cases.spec.ts  global-setup.ts  machine-whoami.spec.ts  publishing.spec.ts  sharing.spec.ts
eap/: requirements.txt  update_tables.bat
eap_backend/: .env.example  .env.sample  Dockerfile  Dockerfile.dev  README.md  db.sqlite3.1  manage.py  requirements.txt
eap_websockets/: Dockerfile  app.py
examples/: Accuracy (TEA-DT Natural Environment Workshop)-2024-5-20T11-1-15.json  Explainability (TEA-DT Health Workshop)-2024-5-18T9-54-49.json  README.md  Safety (TEA-DT Workshop)-2024-5-19T11-41-48.json  TTW Practitioners Hub (Explainability)-2024-10-14T15-55-22.json  TWINE Interoperability-2024-9-21T11-34-14.json  report-it.json  synthetic-data-quality.json
frontend/: .babelrc  .env  Dockerfile  README.md  build_and_run.sh  docker-compose.yml  package-lock.json  package.json  react_info.md  tailwind.config.ts  update_last_modified.sh
guidance/: index.html
lib/: date.ts  (+22 more)
tea_backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  docker-entrypoint-dev.sh  docker-entrypoint.sh  manage.py  pyproject.toml  requirements.txt
tea_backend/api/: forms.py  github.py  model_utils.py  models.py  serializers.py  urls.py  view_utils.py  views.py
tea_backend/api/migrations/: 0001_initial.py  0002_auto_20220519_1546.py  0003_auto_20220520_0928.py  0004_auto_20220531_0935.py  0005_alter_eapuser_is_active.py  0006_alter_eapuser_is_active.py  0006_auto_20230925_1225.py  0007_alter_propertyclaim_strategy.py  0007_eapuser_auth_provider.py  0008_alter_propertyclaim_strategy.py  0009_merge_20231013_0806.py  0010_assurancecase_color_profile.py  0011_alter_assurancecase_color_profile.py  0012_alter_assurancecase_color_profile.py  0013_comment.py  0014_remove_comment_parent.py  0015_githubrepository.py  0016_auto_20240613_1028.py  0017_auto_20240703_0831.py  0017_auto_20240704_1601.py  0018_alter_context_goal.py  0019_merge_0017_auto_20240704_1601_0018_alter_context_goal.py  0020_alter_strategy_goal.py  0021_eapuser_auth_username.py  0022_assurancecase_review_groups.py  0023_assurancecaseimage.py  0024_auto_20240926_1231.py  0025_alter_assurancecaseimage_assurance_case.py  0026_toplevelnormativegoal_assumption.py  0027_alter_toplevelnormativegoal_assumption.py  0028_alter_toplevelnormativegoal_assumption.py  0029_alter_toplevelnormativegoal_assumption.py  0030_auto_20250114_1310.py  0031_casestudy.py  0032_casestudy_owner.py  0033_alter_casestudy_image.py  0034_alter_casestudy_image.py  0035_alter_casestudy_image.py  0036_alter_casestudy_image.py  0037_publishedassurancecase.py  (+13 more)
tea_backend/tea_backend/: asgi.py  settings.py  urls.py  wsgi.py
tea_backend/tea_backend/management/commands/: createadmin.py  ensure_correct_table_names.py  fix_migration_history.py
tea_backend/tests/: README.md  __init__.py  conftest.py  constants_tests.py  test_models.py  test_permissions.py  test_settings.py  test_views.py
tea_backend/tests/factories/: __init__.py  base.py  case_factories.py  collaboration_factories.py  content_factories.py  integration_factories.py  publishing_factories.py  user_factories.py
tea_backend/tests/integration/: __init__.py
tea_backend/tests/models/: __init__.py  test_case_models.py  test_content_models_a.py  test_content_models_b.py  test_integration_models.py  test_publishing_models.py  test_user_models.py
tea_backend/tests/permissions/: __init__.py
tea_backend/tests/serializers/: __init__.py
tea_backend/tests/utils/: __init__.py
tea_backend/tests/views/: __init__.py  test_auth_views.py  test_case_views.py  test_collaboration_views.py  test_content_views.py  test_github_publishing_views.py  test_public_api_views.py
tea_backend/tests/websockets/: __init__.py  test_consumers.py
tea_backend/websockets/: apps.py  consumers.py  middleware.py  models.py  routing.py
tea_backend/websockets/migrations/: 0001_initial.py
(+3117 files in other folders)
